fixed some endpoints
